--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,6 @@
-<<<<<<< HEAD
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=branch 'master' of https\://github.com/callmey/soldesk_javaPJ.git
 eclipse.preferences.version=1
 encoding//src/d20180913/MyWin4.java=UTF-8
-=======
-eclipse.preferences.version=1
-encoding//src/d20180913/MyWin4.java=UTF-8
->>>>>>> branch 'master' of https://github.com/callmey/soldesk_javaPJ.git
+encoding//src/exam_09/Memo.java=UTF-8
